Fixed alignment issue on slider

--- a/css/debtonator.css
+++ b/css/debtonator.css
@@ -4018,6 +4018,9 @@ nav ul li a {
 #clanding section .what-is-xero li:first-child {
   padding-top: 0;
 }
+.slidesControl div {
+  text-align: left;
+}
 
 /*==========================================*/
 /*=== PARTNERS ===*/
