--- a/less/landing.less
+++ b/less/landing.less
@@ -30,3 +30,6 @@
 #clanding section .what-is-xero li:first-child {
   padding-top: 0;
 }
+.slidesControl div {
+  text-align: left;
+}
